// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeatureCard > renders dark mode snapshot 1`] = `
<DocumentFragment>
  <div
    class="dark"
  >
    <div
      class="rounded-2xl border border-accent/20 shadow-card bg-surfaceAlt p-4 transition-transform hover:-translate-y-1 hover:shadow-md dark:bg-dark-surfaceAlt dark:border-dark-accent/20"
    >
      <div
        aria-hidden="true"
        class="mb-2 h-5 w-5 text-accent"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle "
          data-icon="circle"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
            fill="currentColor"
          />
        </svg>
      </div>
      <h3
        class="mb-1 text-base font-semibold"
      >
        Sample
      </h3>
      <div
        class="text-sm text-text dark:text-dark-text"
      >
        Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeatureCard > renders light mode snapshot 1`] = `
<DocumentFragment>
  <div
    class="rounded-2xl border border-accent/20 shadow-card bg-surfaceAlt p-4 transition-transform hover:-translate-y-1 hover:shadow-md dark:bg-dark-surfaceAlt dark:border-dark-accent/20"
  >
    <div
      aria-hidden="true"
      class="mb-2 h-5 w-5 text-accent"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle "
        data-icon="circle"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
          fill="currentColor"
        />
      </svg>
    </div>
    <h3
      class="mb-1 text-base font-semibold"
    >
      Sample
    </h3>
    <div
      class="text-sm text-text dark:text-dark-text"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;
